# ImageClassColor

src/igg_image/: CMakeLists.txt  image.cpp  image.h  image_main.cpp
src/igg_image/io_strategies/: CMakeLists.txt  dummy_strategy.h  png_strategy.cpp  ppm_strategy.cpp  ppm_strategy.h
tests/: CMakeLists.txt  test_init.cpp
